<resources>
    <string name="app_name">ShoppingList</string>
    <string name="action_settings">Settings</string>
    <string name="signIn">SignIn</string>
    <string name="userName">userName</string>
    <string name="password">Password</string>
    <string name="showList">Shopping List</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="userId">User ID:</string>
    <string name="shopping">Continue Shopping</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="addList">Add to Shopping List</string>
    <string name="done">Done</string>
    <string name="productName">Product Name:</string>
    <string name="amount">Amount:</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="listAllUsers">List All Users</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_list">UserListActivity</string>
</resources>
