<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shoppingList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.knowroaming.shoppinglist.ShoppingListActivity"
    tools:showIn="@layout/activity_shopping_list">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userIdLabel"
        android:text="@string/userId"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userId"
        android:layout_toRightOf="@+id/userIdLabel" />

    <ListView
        android:id="@+id/list"
        android:layout_below="@+id/userId"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    </ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnShopping"
        android:layout_alignParentBottom="true"
        android:text="@string/shopping"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnClose"
        android:text="@string/close"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnShopping"/>

</RelativeLayout>
